# MCFM-10.3

./: .gitignore  INSTALL  LICENSE  README.md
lib/VVamp/: CMakeLists.txt  README  constants.f  mod_vvamp.f  mod_vvamp_eval12.f  rcpp.f  types.f  zeta.f
lib/oneloop/: CMakeLists.txt  Config  DESCRIPTION  README  README-MCFM  avh_olo.f90  config.sh  make_cuttools
lib/qcdloop-2.0.9/: CMakeLists.txt
src/: CMakeLists.txt
src/Ax_DM/: CMakeLists.txt  qqb_dm_gg_Axamps.f  qqb_dm_monojet_AxAmp.f  qqb_dm_monojet_lc_Axamps.f  qqb_dm_monojet_nf_ax.f  qqb_dm_monojet_slc_Axamps.f  qqb_dm_monojet_v_Axamps.f  qqb_dm_monophot_g_Axamps.f  qqb_dm_monophot_v_Axamps.f  qqb_dm_qq_Axamps.f
src/BDK/: AAAREADME.txt  CMakeLists.txt  FFMPcc.f  FFMPsc.f  FFPMcc.f  FFPMccT.f  FFPMccTtilde.f  FFPMsc.f  FFPMscT.f  FFPMscTtilde.f  FFPPcc.f  FFPPsc.f  FMPFcc.f  FMPFsc.f  FPFMcc.f  FPFMccTtilde.f  FPFMsc.f  FPFMscT.f  FPFPcc.f  FPFPsc.f  FPMFcc.f  FPMFsc.f  FPPFcc.f  FPPFsc.f  M1bit1.f  M2abit1.f  M2abit2.f  M2bit1.f  M2bit2.f  M2bit3.f  M3abit1.f  M3abit2.f  M3bit1.f  M3bit2.f  M3bit3.f  M3bit4.f  Master1.f  Master2.f  Master2a.f  Master3.f  (+2 more)
src/BLHA/: AAAREADME.txt  CMakeLists.txt  CXX_Interface.cxx  Flavor_Map.cxx  Makefile  Rambo.cxx  gg_2gam.cxx  gg_h.cxx  gg_h_mass.cxx  gg_hg.cxx  gg_hg_mass.cxx  gg_hgg.cxx  gg_hgg_mass.cxx  gg_hh.cxx  makeloops.in  mltest.cxx  mltest.sh  mltest2.cxx  oltest.cxx  oltest.sh  oltest2.cxx  params.cxx  params.lh  qqb_QQb.cxx  qqb_dirgam.cxx  qqb_fourgam.cxx  qqb_gam2j.cxx  qqb_gamgam.cxx  qqb_gmgmjt.cxx  qqb_trigam.cxx  qqb_twojet.cxx  qqb_w.cxx  qqb_w1jet.cxx  qqb_w2jet.cxx  qqb_wgam.cxx  qqb_wgamg.cxx  qqb_wh.cxx  qqb_wh1jet.cxx  qqb_ww.cxx  qqb_wwg.cxx  (+18 more)
src/CuTe-MCFM/: AAAREADME.txt  CMakeLists.txt  include_gg_3l.f90  include_gq_3l.f90  include_qbq_3l.f90  include_qg_3l.f90  include_qpbq_3l.f90  include_qpq_3l.f90  include_qq_3l.f90  mod_Beamfunctions3L.f90  mod_Quadpack.f90  mod_Resummation.f90  mod_ResummationFourier.f90  mod_ResummationGrid.f90  mod_ResummationHardEvolution.f90  mod_Resummation_params.f90
src/Cuts/: AAAREADME.txt  CMakeLists.txt  deltarj.f  durhamalg.f  filterW_bjet.f  filterWbbmas.f  frix.f  genclust2.f  genclust_cone.f  genclust_kt.f  genclustphotons.f  gencuts.f90  gencuts_input.f  iso.f  jetreorder.f  lhcbcode.f  masscuts.f  miscclust.f  photgenclust.f  photo_iso.f  photo_iso_phys.f  photo_iso_z.f  photoncuts.f  photoncuts_ew.f  setnotag.f
src/DM/: CMakeLists.txt  qqb_dm_monojet.f  qqb_dm_monojet_g.f  qqb_dm_monojet_gs.f  qqb_dm_monojet_gvec.f  qqb_dm_monojet_v.f  qqb_dm_monojet_z.f  qqb_dm_monophot.f  qqb_dm_monophot_frag.f  qqb_dm_monophot_fragdips.f  qqb_dm_monophot_g.f  qqb_dm_monophot_gs.f  qqb_dm_monophot_v.f  qqb_dm_qqb.f  qqb_dmprod.f  scalar_dm.f
src/Diboson/: AAAREADME.txt  CMakeLists.txt  lumxmsq_wgamma.f  lumxmsq_zgamma.f  omega_w_0loop.f  omega_w_0loop_vdecay.f  omega_w_1loop.f  omega_w_1loop_vdecay.f  omega_w_2loop.f  omega_w_2loop_vdecay.f  omega_wzgamma.f  omega_zgamma_vdecay.f  spinoru_s.f  spinorz_s.f  vvconfig_m.f  wgamma_amps.f  wzgamma_scheme.f  zgamma_amps.f  zgamma_amps_vdecay.f
src/Diboson2/: AAAREADME.txt  CMakeLists.txt  Li22.f  MXXX.f  Qformfill.f  VVampfill.f  fillcoupfac.f  lumxmsq_vv.f  qqbAjF.f  qqbVVMLLL.f  qqbVVMRLL.f  qqbVVMXXXtreeS.f  qt_amp.f  vv_amps.f  vv_msq.f
src/Dirgam/: AAAREADME.txt  Bigagam.f  Bigbgam.f  Bigcgam.f  CMakeLists.txt  qqb_2jet.f  qqb_2jet_swap.f  qqb_2jnogg.f  qqb_dirgam.f  qqb_dirgam_frag_comb.f  qqb_dirgam_g.f  qqb_dirgam_gs.f  qqb_dirgam_gvec.f  qqb_dirgam_swap.f  qqb_dirgam_v.f  qqb_dirgam_z.f  qqb_hflgam.f  qqb_hflgam_g.f  qqb_hflgam_gs.f  qqb_hflgam_gvec.f  qqb_hflgam_v.f  qqb_hflgam_z.f  qqb_twojet.f  small.f
src/EW/: A7Wpgamgamg.f  A7Wpgamgamg_mmm.f  A7Wpgamgamg_mmp.f  A7Wpgamgamg_mpm.f  A7Wpgamgamg_mpp.f  A7Wpgamgamg_pmm.f  A7Wpgamgamg_pmp.f  A7Wpgamgamg_ppm.f  A7Wpgamgamg_ppp.f  AAAREADME.txt  CMakeLists.txt  GetDeltarr.f  counterterm.f  deltaEW.f  ischeme.f  passedcuts_w_ew.f  passedcuts_wgamma_ew.f  passedcuts_wgammajet_ew.f  qphoton_wq.f  qphoton_wq_gs.f  qphoton_wq_z.f  qqb_w_ew_gs.f  qqb_w_ew_v.f  qqb_w_z_ew.f  qqb_wgam_ew_recola.f  qqb_wgam_g_ew.f  qqb_wgam_gs_ew.f  qqb_wgam_z_ew.f  qqb_wgamg_ew_recola.f  qqb_wgamg_gam.f  qqb_wgamg_gs_ew.f  qqb_wgamg_z_ew.f
src/F90/: AAAREADME.txt  CMakeLists.txt  consts_dp.f90  recurrence.f90  recurrenceA.f90  recurrenceB.f90  recurrenceC.f90  spinfns.f90
src/Fourgam/: AAAREADME.txt  Boxint_init.f  Bubint_init.f  CMakeLists.txt  Triint_init.f  aaaa_MHV_b_init.f  aaaa_MHV_c_init.f  aaaa_MHV_d_init.f  aaaa_MHV_r_init.f  aaaa_NMHV_b_init.f  aaaa_NMHV_c_init.f  aaaa_NMHV_d_init.f  aaaa_NMHV_r_init.f  aaaa_fill.f  qqb_fourgam.f  qqb_fourgam_frag.f  qqb_fourgam_fragdips.f  qqb_fourgam_g.f  qqb_fourgam_gs.f  qqb_fourgam_v.f  qqb_fourgam_z.f  real_aaaaj.f  real_aaajj_fill.f
src/Frag/: AAAREADME.txt  CMakeLists.txt  GGdR_frag.f  NP_FragSetI.f  NP_FragSetII.f  Pert_Frag.f  dipolesfrag.f  dipolesfragx.f  dopols.f  fragdriver.f  gdrg_NLO_frag.f  int_dips_ga.f  locatemcfm.f  transformfrag.f
src/GG_DM/: AAAREADME.txt  CMakeLists.txt  ehsv_dm.f  gg_dm_monojet.f  gg_dm_monojet_g.f  gg_dm_monojet_gs.f  gg_dm_monojet_gvec.f  gg_dm_monojet_top.f  gg_dm_monojet_v.f  gg_dm_monojet_z.f
src/GLY/: AAAREADME.txt  CMakeLists.txt  GLYF1.f  GLYF2.f  GLYI1.f  GLYI2.f  GLYassemble.f  GLYbeam1.f  GLYbeam2.f  GLYlumxmsq.f
src/Gam2j/: AAAREADME.txt  CMakeLists.txt  amp_1g2q.f  amp_1gam1g2q.f  amp_1gam3g.f  amp_4qga.f  amp_4qga_mhvalt.f  amp_4qga_nf.f  amp_4qga_v_assemble.f  amp_del34_gam2j.f  amp_gMHV_gam2j.f  amp_gMHVadj_gam2j.f  amp_gaMHV_gam2j.f  amp_gagg_v_assemble.f  amp_nfloops_gam2j.f  ampsq_1gam1g2q.f  ampsq_1gam3g.f  check_qqb_gam2j_gvecx_new.f  check_qqb_gam2jx_new.f  checksym_gam2jet.f  checksym_gam2jet_v.f  ga_qqbQQb.f  ga_qqbQQb_v.f  kinpoint_qqbQQga_kc.f  kinpoint_qqbggga_kc.f  msq_gam2jx.f  namp_qqbggga.f  qqb_gam2j.f  qqb_gam2j_g.f  qqb_gam2j_g_mad.f  qqb_gam2j_gs.f  qqb_gam2j_gvecx_new.f  qqb_gam2j_v.f  qqb_gam2j_z.f  qqb_gam2jx_new.f  qqbgg_ga.f  qqbgg_ga_v.f  storecs_ga.f
src/Gamgam/: A51mmppp.f  A51mpmpp.f  A51mpppp.f  AGTYAs.f  (+73 more)
(+3439 files in other folders)
