add_subdirectory(Ax_DM)
add_subdirectory(bbHiggs)
add_subdirectory(BDK)
add_subdirectory(BLHA)
add_subdirectory(Cuts)
add_subdirectory(CuTe-MCFM)
add_subdirectory(Diboson)
add_subdirectory(Diboson2)
add_subdirectory(Dirgam)
add_subdirectory(DM)
add_subdirectory(epem3j)
add_subdirectory(F90)
add_subdirectory(Fourgam)
add_subdirectory(Frag)
add_subdirectory(Gamgam)
add_subdirectory(Gamgam3L)
add_subdirectory(GG_DM)
add_subdirectory(ggH)
add_subdirectory(ggHg)
add_subdirectory(ggHgaga)
add_subdirectory(ggHggreal)
add_subdirectory(ggHggvirt)
add_subdirectory(ggHZga)
add_subdirectory(gghgg_dep)
add_subdirectory(GLY)
add_subdirectory(H4pCode)
add_subdirectory(HH)
add_subdirectory(Hjetmass)
add_subdirectory(Gam2j)
add_subdirectory(Httbar)
add_subdirectory(HWW)
add_subdirectory(HZZ)
add_subdirectory(Integrate)
add_subdirectory(Jets)
add_subdirectory(JetsEW)
add_subdirectory(loop)
add_subdirectory(Mods)
add_subdirectory(Multichan)
add_subdirectory(Need)
add_subdirectory(Parton)
add_subdirectory(Phase)
add_subdirectory(Procdep)
add_subdirectory(PS_DM)
add_subdirectory(ptveto)
add_subdirectory(qqH)
add_subdirectory(qqHgaga)
add_subdirectory(qqHWW)
add_subdirectory(qqHZZ)
add_subdirectory(qqZtt)
add_subdirectory(QT)
add_subdirectory(Scal_DM)
add_subdirectory(SCET)
add_subdirectory(SCET0j)
add_subdirectory(SCET1j)
add_subdirectory(Singletop)
add_subdirectory(Singletop_SCET)
add_subdirectory(Singletop2)
add_subdirectory(SingletopH)
add_subdirectory(SingletopZ)
add_subdirectory(Spinor)
#add_subdirectory(Spinor_Maj)
add_subdirectory(Spinor_Weyl)
add_subdirectory(Stopb)
add_subdirectory(Stopjet)
add_subdirectory(Tau)
add_subdirectory(Top)
add_subdirectory(Topdecay)
add_subdirectory(Topdk)
add_subdirectory(TopdkBSY)
add_subdirectory(TopEW)
add_subdirectory(TopH)
add_subdirectory(TopW)
add_subdirectory(TopZ)
add_subdirectory(Trigam)
add_subdirectory(User)
add_subdirectory(Vec_DM)
add_subdirectory(Vol)
add_subdirectory(VV)
add_subdirectory(W)
add_subdirectory(W1jet)
add_subdirectory(W2jet)
add_subdirectory(Wbb)
add_subdirectory(Wbbm)
add_subdirectory(Wbfrmc)
add_subdirectory(WBFWpWp)
add_subdirectory(WBFWW)
add_subdirectory(WBFWZ)
add_subdirectory(WBFZZ)
add_subdirectory(Wbjet)
add_subdirectory(Wcjet)
add_subdirectory(Wgajet)
add_subdirectory(Wgam)
add_subdirectory(Wgamgam)
add_subdirectory(WH1jet)
add_subdirectory(WHbbar)
add_subdirectory(WHgaga)
add_subdirectory(WHWW)
add_subdirectory(WHZZ)
add_subdirectory(WpmZbj)
add_subdirectory(WpWp2j)
add_subdirectory(Wt)
add_subdirectory(WW)
add_subdirectory(WZ)
add_subdirectory(Z)
add_subdirectory(Z1jet)
add_subdirectory(Z2jet)
add_subdirectory(Zaj)
add_subdirectory(Zb)
add_subdirectory(Zbb)
add_subdirectory(Zbbm)
add_subdirectory(ZEW)
add_subdirectory(Zgam)
add_subdirectory(Zgamgam)
add_subdirectory(Zgamjet)
add_subdirectory(ZH1jet)
add_subdirectory(ZHbbar)
add_subdirectory(ZHgaga)
add_subdirectory(ZHWW)
add_subdirectory(ZHZZ)
add_subdirectory(ZQjet)
add_subdirectory(ZZ)
add_subdirectory(EW)
add_subdirectory(Wgamjet)
add_subdirectory(WWjet)
add_subdirectory(ZZjet)
add_subdirectory(WZjet)
add_subdirectory(VVjetamps)
